--- a/1/MyApplication1/app/src/main/res/drawable/myshape.xml
+++ b/1/MyApplication1/app/src/main/res/drawable/myshape.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape>
-            <gradient android:startColor="@null" android:endColor="@null"
+            <gradient android:startColor="#CD853F" android:endColor="#CD853F"
                 android:angle="0"/>
             <stroke android:width="0.5dip" android:color="#808080"/>
             <padding android:left="10dp" android:top="10dp" android:right="10dp"
@@ -14,7 +14,7 @@
     </item>
     <item android:state_focused="true">
         <shape>
-            <gradient android:startColor="@null" android:endColor="@null"
+            <gradient android:startColor="#FF8C00" android:endColor="#FF8C00"
                 android:angle="270"/>
             <stroke android:width="0.5dip" android:color="#808080"/>
             <padding android:left="10dp" android:top="10dp" android:right="10dp"
@@ -25,7 +25,7 @@
     </item>
     <item>
         <shape>
-            <gradient android:startColor="@null" android:endColor="@null"
+            <gradient android:startColor="#FF8C00" android:endColor="#FF8C00"
                 android:angle="90"/>
             <stroke android:width="0.5dip" android:color="#808080"/>
             <padding android:left="10dp" android:top="10dp" android:right="10dp"
