--- a/Weather2/app/src/main/res/layout/choose_area.xml
+++ b/Weather2/app/src/main/res/layout/choose_area.xml
@@ -22,11 +22,12 @@
             android:layout_marginLeft="10dp"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:background="@drawable/ic_launcher_foreground"
+            android:background="@drawable/arrow_left_2"
             />
     </RelativeLayout>
     <ListView
         android:id="@+id/list_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        />
 </LinearLayout>
