--- a/Weather2/app/src/main/res/layout/title.xml
+++ b/Weather2/app/src/main/res/layout/title.xml
@@ -9,7 +9,7 @@
         android:layout_marginLeft="10dp"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:background="@mipmap/ic_launcher"/>
+        android:background="@mipmap/modern11"/>
     <TextView
         android:id="@+id/title_city"
         android:layout_width="wrap_content"
