--- a/Weather2/app/src/main/res/layout/houly_item.xml
+++ b/Weather2/app/src/main/res/layout/houly_item.xml
@@ -1,5 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+        android:layout_width="100dp"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
@@ -10,15 +10,17 @@
         android:layout_gravity="center_horizontal"
         />
     <ImageView
+        android:id="@+id/weather_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/weather_image"
-        android:layout_gravity="center_horizontal"/>
+        android:layout_gravity="center_horizontal" />
     <TextView
         android:id="@+id/weather_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp" />
+
+
 
 </LinearLayout>
