--- a/Weather2/app/src/main/res/layout/activity_weather.xml
+++ b/Weather2/app/src/main/res/layout/activity_weather.xml
@@ -33,7 +33,7 @@
 
                     <include layout="@layout/forecast" />
 
-                    <include layout="@layout/aqi" />
+                    <include layout="@layout/hourly" />
 
                     <include layout="@layout/suggestion" />
                 </LinearLayout>
